--- a/xx-JUnit-Tests/build.gradle
+++ b/xx-JUnit-Tests/build.gradle
@@ -5,8 +5,16 @@ plugins {
 group 'com.midmarsh'
 version '1.0-SNAPSHOT'
 
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 test {
